# alximo

./: Cargo.toml  LICENSE  README.md
alximo/: Cargo.toml
alximo/alximo-core/: Cargo.toml
alximo/alximo-core/src/: utils.rs
alximo/alximo-corr/: Cargo.toml
alximo/alximo-corr/src/: lib.rs  maths.rs
