[package]
name = "alximo"
authors = ["alinacaraiman <alinacaraiman@protonmail.com>"]
license = "MIT"
repository = "https://github.com/alinacaraiman/alximo"
version = { workspace =  true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alximo-corr = {version = "0.1.0", path = "./alximo-corr"}