[package]
name = "alximo-corr"
authors = ["alinacaraiman <alinacaraiman@protonmail.com>"]
keywords = ["statistics", "correlation-treatment"]
license = "MIT"
repository = "https://github.com/alinacaraiman/alximo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"


[dependencies]
anyhow = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = "0.16.0"
statrs = "0.16.0"


